fixed email spacing

--- a/ldsn-apps/staff_directory/css/style.css
+++ b/ldsn-apps/staff_directory/css/style.css
@@ -34,7 +34,13 @@ h5 {
 	}
 .small {font-size:0.8rem;}
 
-.email { font-size:80%;}
+.email { 
+font-size: 80%;
+clear: both;
+display: block;
+margin-bottom: -15px;
+}
+
 h1 {font-size:60px; margin-bottom: -11px;}
 h2 {margin-bottom: 23px; }
 
